--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -97,11 +97,36 @@ jobs:
       run:
         shell: zsh --no-rcs --errexit --pipefail {0}
     if: ${{ inputs.production == false }}
+    env:
+      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,readwrite"
+      VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
           fetch-depth: 0
+
+      - name: Checkout vcpkg repository
+        uses: actions/checkout@v5
+        with:
+          repository: microsoft/vcpkg
+          path: ${{ env.VCPKG_ROOT }}
+
+      - name: Bootstrap vcpkg
+        working-directory: ${{ env.VCPKG_ROOT }}
+        run: ./bootstrap-vcpkg.sh
+      
+      - name: Install mono
+        run: brew install mono
+
+      - name: Setup NuGet Credentials
+        run: |
+          mono "$($VCPKG_ROOT/vcpkg fetch nuget | tail -n1)" sources add \
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json" \
+            -StorePasswordInClearText \
+            -Name "GitHub" \
+            -UserName "kaito-tokyo" \
+            -Password "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Set Up Environment 🔧
         id: setup
@@ -202,12 +227,37 @@ jobs:
       run:
         shell: zsh --no-rcs --errexit --pipefail {0}
     if: ${{ inputs.production == true }}
+    env:
+      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,readwrite"
+      VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
     environment: production
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
           fetch-depth: 0
+
+      - name: Checkout vcpkg repository
+        uses: actions/checkout@v5
+        with:
+          repository: microsoft/vcpkg
+          path: ${{ env.VCPKG_ROOT }}
+
+      - name: Bootstrap vcpkg
+        working-directory: ${{ env.VCPKG_ROOT }}
+        run: ./bootstrap-vcpkg.sh
+      
+      - name: Install mono
+        run: brew install mono
+
+      - name: Setup NuGet Credentials
+        run: |
+          mono "$($VCPKG_ROOT/vcpkg fetch nuget | tail -n1)" sources add \
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json" \
+            -StorePasswordInClearText \
+            -Name "GitHub" \
+            -UserName "kaito-tokyo" \
+            -Password "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Set Up Environment 🔧
         id: setup
@@ -310,11 +360,36 @@ jobs:
     defaults:
       run:
         shell: bash
+    env:
+      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,readwrite"
+      VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
           fetch-depth: 0
+
+      - name: Checkout vcpkg repository
+        uses: actions/checkout@v5
+        with:
+          repository: microsoft/vcpkg
+          path: ${{ env.VCPKG_ROOT }}
+
+      - name: Bootstrap vcpkg
+        working-directory: ${{ env.VCPKG_ROOT }}
+        run: ./bootstrap-vcpkg.sh
+      
+      - name: Install mono
+        run: sudo apt-get -y install mono-devel
+
+      - name: Setup NuGet Credentials
+        run: |
+          mono "$($VCPKG_ROOT/vcpkg fetch nuget | tail -n1)" sources add \
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json" \
+            -StorePasswordInClearText \
+            -Name "GitHub" \
+            -UserName "kaito-tokyo" \
+            -Password "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Set Up Environment 🔧
         id: setup
@@ -381,11 +456,38 @@ jobs:
     defaults:
       run:
         shell: pwsh
+    env:
+      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,readwrite"
+      VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
           fetch-depth: 0
+
+      - name: Checkout vcpkg repository
+        uses: actions/checkout@v5
+        with:
+          repository: microsoft/vcpkg
+          path: ${{ env.VCPKG_ROOT }}
+
+      - name: "Bootstrap vcpkg"
+        working-directory: "${{ env.VCPKG_ROOT }}"
+        shell: "pwsh"
+        run: |
+          .\bootstrap-vcpkg.bat
+
+      - name: "Setup NuGet Credentials"
+        shell: pwsh
+        run: |
+          $NUGET_EXE_PATH = & "${{ env.VCPKG_ROOT }}/vcpkg" fetch nuget | Select-Object -Last 1
+          
+          & $NUGET_EXE_PATH sources add `
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json" `
+            -StorePasswordInClearText `
+            -Name "GitHub" `
+            -UserName "kaito-tokyo" `
+            -Password "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Set Up Environment 🔧
         id: setup
