--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -18,104 +18,74 @@ defaults:
 
 permissions:
   contents: "read"
+  packages: "write"
 
 jobs:
-  RunTestsOnMacOS:
-    name: "Run Tests on macOS"
+  RunTests:
+    name: "Run Tests on ${{ matrix.os-name }}"
+    strategy:
+      matrix:
+        include:
+          - os: macos-15
+            os-name: macOS
+            preset: macos-testing-ci
+          - os: windows-2022
+            os-name: Windows
+            preset: windows-testing-ci-x64
+          - os: ubuntu-24.04
+            os-name: Ubuntu
+            preset: ubuntu-testing-ci-x86_64
+      fail-fast: false
 
-    runs-on: "macos-15"
-
+    runs-on: ${{ matrix.os }}
     timeout-minutes: 30
 
     env:
-      VCPKG_BINARY_SOURCES: "x-gha,read;files,${{ github.workspace }}/vcpkg-cache,readwrite"
+      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,readwrite"
+      VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
 
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v5"
 
-      - name: "Restore Vcpkg cache"
-        uses: "actions/cache/restore@v4"
-        id: "vcpkg-cache"
-        with:
-          path: "${{ github.workspace }}/vcpkg-cache"
-          key: "${{ runner.os }}-vcpkg-${{ hashFiles('**/vcpkg.json', '**/vcpkg-configuration.json') }}"
-          restore-keys: |
-            ${{ runner.os }}-vcpkg-
-
-      - name: "Configure"
-        run: "cmake --preset macos-testing-ci"
-
-      - name: "Build"
-        run: "cmake --build --preset macos-testing-ci"
-
-      - name: "Save Vcpkg cache"
-        uses: "actions/cache/save@v4"
-        with:
-          path: "${{ github.workspace }}/vcpkg-cache"
-          key: "${{ steps.vcpkg-cache.outputs.cache-primary-key }}"
-
-      - name: "Run tests"
-        run: "ctest --preset macos-testing-ci --verbose"
-
-  RunTestsOnWindows:
-    name: "Run Tests on Windows"
-
-    runs-on: "windows-2022"
-
-    timeout-minutes: 30
-
-    env:
-      VCPKG_BINARY_SOURCES: "x-gha,read;files,${{ github.workspace }}/vcpkg-cache,readwrite"
-
-    steps:
-      - name: "Checkout"
+      - name: "Checkout vcpkg repository"
         uses: "actions/checkout@v5"
-
-      - name: "Restore Vcpkg cache"
-        uses: "actions/cache/restore@v4"
-        id: "vcpkg-cache"
         with:
-          path: "${{ github.workspace }}/vcpkg-cache"
-          key: "${{ runner.os }}-vcpkg-${{ hashFiles('**/vcpkg.json', '**/vcpkg-configuration.json') }}"
-          restore-keys: |
-            ${{ runner.os }}-vcpkg-
+          repository: "microsoft/vcpkg"
+          path: "${{ env.VCPKG_ROOT }}"
 
-      - name: "Configure"
-        run: "cmake --preset windows-testing-ci-x64"
+      - name: "Bootstrap vcpkg"
+        if: runner.os != 'Windows'
+        working-directory: "${{ env.VCPKG_ROOT }}"
+        run: |
+          cd "${{ env.VCPKG_ROOT }}"
+          ./bootstrap-vcpkg.sh
 
-      - name: "Build"
-        run: "cmake --build --preset windows-testing-ci-x64"
+      - name: "Bootstrap vcpkg (Windows)"
+        if: runner.os == 'Windows'
+        working-directory: "${{ env.VCPKG_ROOT }}"
+        shell: "pwsh"
+        run: |
+          cd "${{ env.VCPKG_ROOT }}"
+          .\bootstrap-vcpkg.bat
 
-      - name: "Save Vcpkg cache"
-        uses: "actions/cache/save@v4"
+      - name: "Setup .NET"
+        uses: "actions/setup-dotnet@v4"
         with:
-          path: "${{ github.workspace }}/vcpkg-cache"
-          key: "${{ steps.vcpkg-cache.outputs.cache-primary-key }}"
+          dotnet-version: '8.0.x'
 
-      - name: "Run tests"
-        run: "ctest --preset windows-testing-ci-x64 --verbose"
+      - name: "Install dependencies on macOS"
+        if: runner.os == 'macOS'
+        run: |
+          brew install mono
 
-  RunTestsOnUbuntu:
-    name: "Run Tests on Ubuntu"
-
-    runs-on: "ubuntu-24.04"
-
-    timeout-minutes: 30
-
-    env:
-      VCPKG_BINARY_SOURCES: "x-gha,read;files,${{ github.workspace }}/vcpkg-cache,readwrite"
-
-    steps:
-      - name: "Disable man-db update"
+      - name: "Install dependencies on Ubuntu"
+        if: runner.os == 'Linux'
         run: |
           echo "man-db man-db/auto-update boolean false" | sudo debconf-set-selections
           sudo apt-get remove --purge -y man-db
-
-      - name: "Install dependencies"
-        run: |
           sudo add-apt-repository -y ppa:obsproject/obs-studio
-          sudo apt update
+          sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
             libgles2-mesa-dev \
             obs-studio \
@@ -127,31 +97,35 @@ jobs:
             jq \
             ninja-build \
             pkg-config \
-            xvfb
+            mono-devel
 
-      - name: "Checkout"
-        uses: "actions/checkout@v5"
+      - name: "Setup NuGet Credentials on Windows"
+        shell: pwsh
+        run: |
+          $NUGET_EXE_PATH = & "${{ env.VCPKG_ROOT }}/vcpkg" fetch nuget | Select-Object -Last 1
+          
+          & $NUGET_EXE_PATH sources add `
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json" `
+            -StorePasswordInClearText `
+            -Name "GitHub" `
+            -UserName "kaito-tokyo" `
+            -Password "${{ secrets.GITHUB_TOKEN }}"
 
-      - name: "Restore Vcpkg cache"
-        uses: "actions/cache/restore@v4"
-        id: "vcpkg-cache"
-        with:
-          path: "${{ github.workspace }}/vcpkg-cache"
-          key: "${{ runner.os }}-vcpkg-${{ hashFiles('**/vcpkg.json', '**/vcpkg-configuration.json') }}"
-          restore-keys: |
-            ${{ runner.os }}-vcpkg-
+      - name: "Setup NuGet Credentials on macOS / Linux"
+        if: runner.os != 'Windows'
+        run: |
+          mono "$($VCPKG_ROOT/vcpkg fetch nuget | tail -n1)" sources add \
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json" \
+            -StorePasswordInClearText \
+            -Name "GitHub" \
+            -UserName "kaito-tokyo" \
+            -Password "${{ secrets.GITHUB_TOKEN }}"
 
       - name: "Configure"
-        run: "cmake --preset ubuntu-testing-ci-x86_64"
+        run: "cmake --preset ${{ matrix.preset }}"
 
       - name: "Build"
-        run: "cmake --build --preset ubuntu-testing-ci-x86_64"
-
-      - name: "Save Vcpkg cache"
-        uses: "actions/cache/save@v4"
-        with:
-          path: "${{ github.workspace }}/vcpkg-cache"
-          key: "${{ steps.vcpkg-cache.outputs.cache-primary-key }}"
-
+        run: "cmake --build --preset ${{ matrix.preset }}"
+        
       - name: "Run tests"
-        run: "ctest --preset ubuntu-testing-ci-x86_64 --verbose"
+        run: "ctest --preset ${{ matrix.preset }} --verbose"
