--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -23,6 +23,11 @@ on:
       pluginName:
         description: Project name detected by parsing build spec file
         value: ${{ jobs.check-event.outputs.pluginName }}
+
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   check-event:
     name: Check GitHub Event Data 🔎
